fixes some problems with media queries and z-index

--- a/css/modules/composer.scss
+++ b/css/modules/composer.scss
@@ -47,5 +47,6 @@ composer {
 
   .add-video {
     background-image: url('../images/icons/add-video-light.svg');
+    margin-right: 0;
   }
 }
